--- a/pacific.css
+++ b/pacific.css
@@ -9,8 +9,8 @@ body {
 h1 {
 	background-color: #000033;
 	color: #FFFFFF;
-	background-image: url(sunset.jpg);
-	background-position: right;
+	background-image: url(sunset.jpg);/*https://www.w3schools.com/cssref/pr_background-image.asp*/
+	background-position: right;/*https://www.w3schools.com/cssref/pr_background-position.asp*/
 	background-repeat: no-repeat;
 	padding: 10px;
 	margin-bottom: 0;
@@ -21,7 +21,7 @@ h1 {
 h2 {
 	color: #3399CC;
 	font-family: Georgia, "New Times Roman", serif;
-	text-shadow: 1px 1px 1px #ccc;
+	text-shadow: 1px 1px 1px #ccc;/*https://www.w3schools.com/cssref/css3_pr_text-shadow.asp*/
 }
 
 
@@ -52,8 +52,8 @@ nav ul {
 
 
 nav a {
-	text-decoration: none;
-	-webkit-transition: color 3s ease-out;
+	text-decoration: none;/*https://www.w3schools.com/cssref/pr_text_text-decoration.asp*/
+	-webkit-transition: color 3s ease-out;/*https://www.w3schools.com/css/css3_transitions.asp*/
 	-moz-transition: color 3s ease-out;
 	-o-transition: color 3s ease-out;
 	transition: color 3s ease-out;
@@ -61,15 +61,15 @@ nav a {
 
 
 nav a:link {
-	color: #000033;
+	color: #000033;/*https://www.w3schools.com/css/css_link.asp*/
 }
 
 nav a:visited {
-	color: #344873;
+	color: #344873;/*https://www.w3schools.com/css/css_link.asp*/
 }
 
 nav a:hover {
-	color: #ffffff;
+	color: #ffffff;/*https://www.w3schools.com/css/css_link.asp*/
 }
 
 
@@ -236,7 +236,7 @@ textarea {
 
 #gallery ul {
 	width: 350px;
-	list-style-type: none;
+	list-style-type: none;/*https://www.w3schools.com/cssref/pr_list-style-type.asp*/
 }
 
 #gallery li {
@@ -291,10 +291,10 @@ textarea {
 
 #gallery span {
 	position: absolute;
-	left: -1000px;
+	left: -1000px;/*https://www.w3schools.com/cssref/pr_class_position.asp*/
 	opacity: 0;
-	-webkit-transition: opacity 3s ease-in-out;
-	-moz-transition: opacity 3s ease-in-out;
+	-webkit-transition: opacity 3s ease-in-out;/*https://www.w3schools.com/css/css_image_transparency.asp*/
+	-moz-transition: opacity 3s ease-in-out;/*https://www.w3schools.com/css/css3_transitions.asp*/
 	-o-transition: opacity 3s ease-in-out;
 	transition: opacity 3s ease-in-out;
 }
@@ -306,12 +306,11 @@ textarea {
 	left: 320px;
 	text-align: center;
 	opacity: 1;
-}
+}/*https://www.w3schools.com/cssref/sel_hover.asp*/
 
 #content ul li {
 	padding-left: 20px;
-	background-position: 0 3px;
-	background-image: url("marker.gif");
+	background-image: url(./marker.gif);/*https://www.w3schools.com/cssref/pr_background-image.asp*/
 	background-repeat: no-repeat;
 	list-style: none;
 }
@@ -331,7 +330,7 @@ textarea {
 	#wrapper {
 		width: 652px;
 		box-shadow: 5px 5px 5px #000033;
-	}
+	}/*https://www.w3schools.com/cssref/css3_pr_mediaquery.asp*/
 }
 
 @media screen and (min-width: 805px)and (max-width: 986px) {
@@ -348,7 +347,7 @@ textarea {
 		width: 686px;
 		box-shadow: 5px 5px 5px #000033;
 	}
-}
+}/*https://www.w3schools.com/cssref/css3_pr_mediaquery.asp*/
 
 @media screen and (min-width: 986px)and (max-width: 1588px) {
 	h1 {
@@ -364,4 +363,4 @@ textarea {
 		width: 830px;
 		box-shadow: 5px 5px 5px #000033;
 	}
-}
+}/*https://www.w3schools.com/cssref/css3_pr_mediaquery.asp*/
